--- a/css/main.css
+++ b/css/main.css
@@ -2389,11 +2389,11 @@ body.mobile-nav-active #mobile-nav-toggle {
   .service-area .col-lg-3.col-md-6:nth-child(1) .single-service {
     background: #00c2cb; }
   .service-area .col-lg-3.col-md-6:nth-child(2) .single-service {
-    background: #cb6ce6; }
+    background: #00c2cb; }
   .service-area .col-lg-3.col-md-6:nth-child(3) .single-service {
     background: #00c2cb; }
   .service-area .col-lg-3.col-md-6:nth-child(4) .single-service {
-    background: #cb6ce6; }
+    background: #00c2cb; }
 
 .single-service {
   color: #fff;
